# ai-scientist-skills

./: CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  README.md  README.zh-CN.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt
.agents/skills/: ai-scientist
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: workshop
docs/superpowers/plans/: 2026-04-07-codex-integration.md  2026-04-07-grant-writer-skills.md  2026-04-07-improvements.md
docs/superpowers/specs/: 2026-04-07-grant-writer-skills-design.md
examples/: workshop_template.md
scripts/: install-all.sh  install.sh  setup.py
skills/: ai-scientist-experiment-step.md  ai-scientist-experiment.md  ai-scientist-ideation.md  ai-scientist-lit-search.md  ai-scientist-plot.md  ai-scientist-review.md  ai-scientist-writeup.md  ai-scientist.md
skills/ai-scientist/: SKILL.md
skills/codex-review/: SKILL.md
skills/experiment/: SKILL.md
skills/experiment-execute/: SKILL.md
skills/experiment-generate/: SKILL.md
skills/experiment-step/: SKILL.md
skills/ideation/: SKILL.md
skills/lit-search/: SKILL.md
skills/plot/: SKILL.md
skills/review/: SKILL.md
skills/workshop/: SKILL.md
skills/writeup/: SKILL.md
templates/: bfts_config.yaml
tools/: budget_estimator.py  config.py  device_utils.py  latex_compiler.py  modal_runner.py  state_manager.py  verify_setup.py
tools/templates/: bfts_config.yaml
